@@ -1,3 +1,9 @@
+2008-03-02  Callum McKenzie  <callum@spooky-possum.org>
+
+	* applet.c (dialog_cb): Make allowance for the disappearance of
+	gnome-accessibility-keyboard-properties and its movement to
+	gnome-keyboard-properties. (Bug #517500.)
+
 2008-01-08  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* GNOME_AccessxStatusApplet.server.in.in:
